--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,89 @@
     font-family: 'Lusitana', serif;
     font-family: 'Maitree', serif;
     font-family: 'Work Sans', sans-serif;
-    margin: 0px;
-    padding: 0px;
+}
+.btn-primary{
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 20px 25px;
+    color: #fff;
+    font-size: 1.5rem;
+    border: none;
+    cursor: pointer;
+    margin: 30px 0 50px 0;
+}
+
+header{
+    background: rgba(255, 144, 14, 0.10);
+    padding: 40px 240px;
 }
 .nav-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+
 }
+.nav-title{
+    font-size: 2.4rem;
+    color:  #131313;
+    font-weight: 700;
+}
+.nav-container ul{
+    display: flex;
+}
+.nav-container  li{
+    list-style: none;
+    margin-right: 30px;
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+.nav-container li a{
+text-decoration: none;
+color:  #424242;
+}
+
+
+.banner{
+    max-width: 840px;
+}
+.banner-container{
+    max-width: 850px;
+    text-align: center;
+    margin: 0 auto;
+}
+.banner-titl{
+    font-size: 4rem;
+    font-weight: 700;
+    color: #131313;
+}
+.banner-descripton{
+    color: #727272;
+    font-size: 1rem;
+
+}
+.banner img {
+    width: 100%;
+}
+
+
+/* responsive style */
+@media screen and (max-width: 576px){
+    header{
+        padding: 20px;
+    }
+    .nav-container{
+        flex-direction: column;
+    }
+
+}
+
+ @media screen and (min-width: 576px) and (max-width: 976px){
+    header{
+        padding: 50px;
+    }
+    .nav-container{
+        flex-direction: column;
+    }
+    
+
+} 
