--- a/styles/style.css
+++ b/styles/style.css
@@ -64,13 +64,56 @@ color:  #424242;
 }
 .banner-descripton{
     color: #727272;
-    font-size: 1rem;
+    font-size: 0.8rem;
+    padding: 0 100px;
 
 }
 .banner img {
     width: 100%;
 }
 
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 20px 200px 0;
+}
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px;
+
+}
+.teams-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.team-title{
+    font-size: 3rem;
+}
+.quick{
+    color: #727272;
+    font-weight: 500;
+}
+.of{
+    color:  #131313;
+    font-weight: 700;
+}
+.features{
+    color: #FF900E;
+    font-weight: 700;
+}
+.team-discreption{
+    color:  #727272;
+    font-size: 16px;
+    font-weight: 400;
+
+
+}
 
 /* responsive style */
 @media screen and (max-width: 576px){
