--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,8 @@
   @import url('https://fonts.googleapis.com/css2?family=Coustard&family=Lusitana:wght@400;700&family=Maitree:wght@400;700&family=Work+Sans:ital,wght@0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,500;1,600;1,700&display=swap');
 
 *{
+    margin: 0;
+    padding: 0;
     font-family: 'Coustard', serif;
     font-family: 'Lusitana', serif;
     font-family: 'Maitree', serif;
@@ -11,17 +13,23 @@
 .btn-primary{
     border-radius: 8px;
     background: #FF900E;
-    padding: 20px 25px;
+    padding: 12px 18px;
     color: #fff;
     font-size: 1.5rem;
     border: none;
     cursor: pointer;
-    margin: 30px 0 50px 0;
+    margin: 10px 0 23px ;
+}
+.text-ligth-gray{
+    color: #727272;
+    font-size: 0.8rem;
+    padding: 0 10px;
+
 }
 
 header{
     background: rgba(255, 144, 14, 0.10);
-    padding: 40px 240px;
+    padding: 40px 100px;
 }
 .nav-container{
     display: flex;
@@ -50,10 +58,10 @@ color:  #424242;
 
 
 .banner{
-    max-width: 840px;
+    max-width: 1440px;
 }
 .banner-container{
-    max-width: 850px;
+    max-width: 1440px;
     text-align: center;
     margin: 0 auto;
 }
@@ -62,12 +70,7 @@ color:  #424242;
     font-weight: 700;
     color: #131313;
 }
-.banner-descripton{
-    color: #727272;
-    font-size: 0.8rem;
-    padding: 0 100px;
 
-}
 .banner img {
     width: 100%;
 }
@@ -76,24 +79,26 @@ color:  #424242;
 main{
     max-width: 1440px;
     margin: 0 auto;
-    padding: 20px 200px 0;
+    padding-top: 80px;
+    margin-left: 90px ;
 }
 .teams-container{
     display: flex;
     align-items: center;
 }
 .teams-img-container{
-    display: grid;
+   display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 25px;
+    gap: 15px;
 
 }
 .teams-content{
-    padding-left: 70px;
-    padding-right: 70px;
+    padding-left: 30px;
+    padding-right: 80px;
 }
 .team-title{
-    font-size: 3rem;
+    font-size: 2.5rem;
+    margin: 5px;
 }
 .quick{
     color: #727272;
@@ -107,31 +112,42 @@ main{
     color: #FF900E;
     font-weight: 700;
 }
-.team-discreption{
-    color:  #727272;
-    font-size: 16px;
-    font-weight: 400;
 
-
-}
 
 /* responsive style */
 @media screen and (max-width: 576px){
     header{
         padding: 20px;
     }
-    .nav-container{
+    .nav-container, .teams-container{
         flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-container{
+        margin-right: 100px;
     }
 
 }
 
- @media screen and (min-width: 576px) and (max-width: 976px){
+ @media screen and (min-width: 576px) and (max-width: 992px){
     header{
         padding: 50px;
     }
-    .nav-container{
+    .nav-container, .teams-container
+    
+    {
         flex-direction: column;
+    }
+    .teams-content{
+        margin: 0 auto;
+        text-align: center;
+
+    }
+    .teams-img-container{
+        margin-right: 100px;
+        padding-bottom: 20px;
     }
     
 
