--- a/styles/style.css
+++ b/styles/style.css
@@ -22,8 +22,11 @@
 }
 .text-ligth-gray{
     color: #727272;
-    font-size: 0.8rem;
-    padding: 0 10px;
+    font-size: 1.1rem;
+    padding: 15px 10px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 
 }
 
@@ -112,6 +115,107 @@ main{
     color: #FF900E;
     font-weight: 700;
 }
+.feature{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 130px;
+    gap: 35px;
+}
+.feature-content{
+    margin-top: 25px;
+    
+    
+}
+.feature .feature-title{
+    border-left: 5px solid  #FF900E;
+    padding-left: 20px;
+}
+.feature-title{
+    font-size: 2.2rem;
+}
+.feature-info{
+    font-size: 20px;
+    margin-left: 8px;
+}
+.feature-description{
+    padding-top: 24px;
+    padding-bottom: 30px;
+}
+.feature-img{
+    margin-right: 100px;
+
+}
+.feature-img img{
+    width: 600px;
+    height: 700px;
+    margin-left: 100px;
+    
+}
+.ten-years{
+    width: 320px;
+    text-align: center;
+    border-radius: 8px;
+    background: #FF900E;
+    color: #fff;
+    padding: 40px;
+    position: relative;
+    bottom: 110px;
+
+}
+.ten-years h2{
+    font-size: 3.8rem;
+    margin: 0;
+    
+}
+.ten-years p{
+    font-size: 1.5rem;
+    
+    
+}
+.factor-title{
+    color:  #131313;
+    font-size: 45px;
+    font-weight: 700;
+}
+.factors{
+    padding: 20px;
+}
+.factors-work{
+    display: flex;
+    gap: 100px;
+    align-items: center;
+    padding-left: 50px;
+    padding-right: 40px;
+    margin-bottom: 100px;
+}
+.factor-icon{
+    padding: 35px;
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+}
+.factor-sting{
+    color: #424242;
+    font-size: 45px;
+    font-weight: 600;
+}
+.factor-info{
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 600;
+}
+.sponser{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.sponser-pic{
+    display: flex;
+    justify-content: space-around;
+    margin-right: 50px;
+    align-items: center;
+    text-align: center;
+
+}
 
 
 /* responsive style */
@@ -119,7 +223,7 @@ main{
     header{
         padding: 20px;
     }
-    .nav-container, .teams-container{
+    .nav-container, .teams-container, .feature, .factors-work{
         flex-direction: column;
     }
     .teams-img-container{
@@ -128,6 +232,18 @@ main{
     .teams-container{
         margin-right: 100px;
     }
+    .feature-img img{
+        max-width: 350px;
+        margin-left: 0;
+        height: 300px;
+    }
+    .feature{
+        margin-right: 50px;
+    }
+    .ten-years{
+        position: static;
+        max-width: 270px;
+    }
 
 }
 
@@ -135,7 +251,7 @@ main{
     header{
         padding: 50px;
     }
-    .nav-container, .teams-container
+    .nav-container, .teams-container, .feature 
     
     {
         flex-direction: column;
@@ -149,6 +265,10 @@ main{
         margin-right: 100px;
         padding-bottom: 20px;
     }
+    .factors-work{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
     
 
 } 
